[package]
name = "rust-polyglot"
version = "0.1.0"
edition = "2024"

[dependencies]
png = "0.17"  # For chunk parsing
zip = "1.1"   # For archive reading/writing
crc32fast = "1.3"  # Fast CRC calculation
clap = { version = "4.0", features = ["derive"] }  # CLI
anyhow = "1.0"  # Error context
thiserror = "1.0"  # Error types

tempfile = "3.3"

[dev-dependencies]
proptest = "1.1"
